<resources>
    <string name="app_name">Lunch-in</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>

    <string name="money_sacrificed">Money sacrificed on Lunch Out: %1$s</string>
    <string name="goal_progress">Progress toward goal: %1$s/%2$s</string>
    <string name="goal_remaining">Progress remaining: %1$s</string>
    <string name="goal_name">Goal Name</string>
    <string name="goal_cost">Goal Cost</string>
    <string name="input_avg_cost_of_lunch">Enter the average cost of lunch</string>

    <string name="dialog_title_wifi_networks">Select Your Wifi Network</string>
    <string name="no_networks_detected">"No networks detected"</string>

    <string name="lunch_ins_this_month">Lunched-in this month</string>
    <string name="lunch_outs_this_month">Lunched-out this month</string>
    <string name="lunch_ins_this_year">Lunched-in this year</string>
    <string name="lunch_outs_this_year">Lunched-out this year</string>

    <plurals name="day">
        <item quantity="zero">days</item>
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>

    <string name="title_my_savings_goal">My Savings Goal </string>

    <string name="goal_reached">Goal reached!</string>

    <!-- begin content descriptions -->
    <string name ="cd_row_setting_icon">setting item icon</string>
    <string name ="cd_row_setting_title">setting item title</string>
    <string name ="cd_row_setting_description">setting item description</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <!-- /end content descriptions -->

    <string name="notification_title">Lunch In</string>
    <string name="notification_text_lunch_out">Going out for lunch?</string>
    <string name="notification_text_lunch_in">Did you stay in for lunch?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>

    <string-array name="days_of_the_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="default_goal_name">e.g. Bahamas Vacation</string>
    <integer name="default_goal_cost">1500</integer>

    <string name="info_national_average_income">
        %1$s is the current national average per person in the US. Enter your
        information for personalized statistics. All settings data are stored locally and never shared
    </string>

    <!-- preference titles -->
    <string name="pref_title_work_wifi">Work Wifi</string>
    <string name="pref_title_lunch_start">Lunch Time Begin</string>
    <string name="pref_title_lunch_end">Lunch Time End</string>
    <string name="pref_title_lunch_days_tracked">Days to track</string>
    <string name="pref_title_avg_lunch_cost">Average Lunch Cost</string>
    <string name="pref_title_gross_salary">Gross Annual Salary</string>
    <string name="pref_title_my_goal">My Goal</string>
    <string name="pref_title_last_ssid">Last SSID</string>

    <!--preference descriptions-->
    <string name="pref_description_work_wifi">Select your work network</string>
    <string name="pref_description_lunch_start">Lunch start time</string>
    <string name="pref_description_lunch_end">Lunch end time</string>
    <string name="pref_description_lunch_days_tracked">Select the days you want to track</string>
    <string name="pref_description_avg_lunch_cost">The average cost of lunch if you ate out</string>
    <string name="pref_description_gross_salary">(Optional) Used to calculate cost facts. All data is kept privately on your device and is not shared</string>
    <string name="pref_description_my_goal">Enter a savings goal</string>
    <string name="pref_description_last_ssid">Helps avoid too many notifications</string>
</resources>
