<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" >

    <TextView
        android:id="@+id/dialog_lunch_cost_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:padding="8dp"
        android:textColor="@color/app_default_text"
        />


    <EditText
        android:id="@+id/dialog_lunch_cost_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        android:layout_gravity="center"
        android:hint="@string/input_avg_cost_of_lunch"
        android:textColorHint="@color/light_gray"
        android:padding="5dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        >

        <Button
            android:id="@+id/dialog_lunch_cost_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_blue_bright"
            android:layout_gravity="right"
            android:text="@string/button_cancel"
            />

        <Button
            android:id="@+id/dialog_lunch_cost_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_blue_bright"
            android:layout_gravity="right"
            android:text="@string/button_ok"/>

    </LinearLayout>

</LinearLayout>